fixed the jvm parameters